<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".ui.branchdetails.BranchDetails">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">


                    <ImageView
                        android:id="@+id/department_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@tools:sample/avatars" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/close_Image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="20dp"
                        android:elevation="2dp"
                        app:srcCompat="@drawable/close_icon" />

                    <TextView
                        android:id="@+id/branch_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="80dp"
                        android:elevation="2dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/branch_location"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="20dp"
                        android:elevation="2dp"
                        app:srcCompat="@drawable/location_icon" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#59000000"
                        android:elevation="1dp" />
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/firstStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/departments"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_all"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/departmentRec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp" />

                    <TextView
                        android:id="@+id/no_depatrments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_depatrments"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/popular_doctor"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/doctorsRec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp" />

                <LinearLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:text="@string/select_date"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="15dp"
                            app:srcCompat="@drawable/ic_baseline_date_range_24" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/dateRec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:text="@string/select_time"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/timeRec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp" />

                    <Button
                        android:id="@+id/submitButton"
                        android:layout_width="290dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/login_frame"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textColorLink="#FFFFFF"
                        android:textSize="20sp"
                        android:layout_marginBottom="30dp"
                        tools:layout_editor_absoluteY="329dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>