<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#454545"
        tools:context=".ui.login.Login">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:id="@+id/view2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="-90dp"
                android:layout_marginBottom="-90dp"
                android:background="@drawable/circle_shape" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:elevation="0.1dp"
                    android:src="@drawable/logo" />

                <View
                    android:id="@+id/view"
                    android:layout_width="600dp"
                    android:layout_height="600dp"
                    android:layout_marginStart="-100dp"
                    android:layout_marginTop="-390dp"
                    android:background="@drawable/circle_shape" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomEnd="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusTopStart="13dp"
                app:boxStrokeColor="#000000"
                app:hintTextColor="@color/white"
                app:placeholderTextColor="#000000"
                app:prefixTextColor="#000000"
                tools:layout_editor_absoluteY="155dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomEnd="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusTopStart="13dp"
                app:boxStrokeColor="#FF000000"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark"
                app:placeholderTextColor="#FF000000"
                app:prefixTextColor="#FF000000"
                tools:layout_editor_absoluteY="231dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:cursorVisible="false"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/login_frame"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textColorLink="#FFFFFF"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="329dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>